Added secundary color var to root

--- a/css/templates.css
+++ b/css/templates.css
@@ -1,7 +1,6 @@
 :root{
  --maincolor: #2A3647;
-
-
+ --secundarycolor: #29ABE2;
 }
 
 * {
@@ -95,7 +94,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #29ABE2;
+    color: var(--secundarycolor);
 }
 
 .activeUser:hover {
@@ -200,5 +199,5 @@ nav {
 
 .sidenavLegalLinks a:hover {
     font-weight: 700;
-    color: #29ABE2;
+    color: var(--secundarycolor);
 }
