--- a/css/summary.css
+++ b/css/summary.css
@@ -1,5 +1,3 @@
-/* SUMMARY */
-
 .summaryPageContent{
     display: flex;
     align-items: center;
@@ -58,7 +56,28 @@
 
 .summaryUrgentToDos{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 61px;
     height: 168px;
+    padding: 28px 48px;
+}
+
+.summaryUrgentToDosLeft{
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
+
+.urgentToDosSeparation{
+    height: 100px;
+    border: 2px solid #D1D1D1;
+}
+
+.summaryUrgentToDosRight{
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
 }
 
 .summaryCurrentTasksOverview{
