--- a/css/summary.css
+++ b/css/summary.css
@@ -1,41 +1,54 @@
-.summaryPageContent{
+.summaryPageContent {
     display: flex;
     align-items: center;
     gap: 100px;
 }
 
-.summaryBoxes{
+.summaryBoxes {
     box-shadow: 0px 0px 4px 0px #0000001A;
     border-radius: 30px;
     background-color: white;
+    transition: 100ms all ease-in-out;
 }
 
-.summaryPageHeading{
+.summaryBoxes:hover {
+    background-color: var(--maincolor);
+    color: white;
+    cursor: pointer;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    scale: 1.10;
+}
+
+.summaryBoxes:hover .toDoIcon {
+    filter: invert(1) brightness(2);
+}
+
+.summaryPageHeading {
     display: flex;
     align-items: center;
     gap: 30px;
     margin-bottom: 29px;
 }
 
-.headingBorder{
+.headingBorder {
     height: 59px;
     border: 3px solid var(--secondarycolor);
 
 }
 
-.summaryPageTasksContainer{
+.summaryPageTasksContainer {
     display: flex;
     flex-direction: column;
     gap: 24px;
     width: 560px;
 }
 
-.summaryToDosGeneral{
-    display:flex;
+.summaryToDosGeneral {
+    display: flex;
     justify-content: space-between;
 }
 
-.summaryToDosContainer{
+.summaryToDosContainer {
     display: flex;
     align-items: center;
     padding: 38px 58px;
@@ -43,18 +56,18 @@
     gap: 24px;
 }
 
-.summaryToDosContainerText{
+.summaryToDosContainerText {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.summaryToDosNumber{
+.summaryToDosNumber {
     font-size: 64px;
     font-weight: 600;
 }
 
-.summaryUrgentToDos{
+.summaryUrgentToDos {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,38 +76,38 @@
     padding: 28px 48px;
 }
 
-.summaryUrgentToDosLeft{
+.summaryUrgentToDosLeft {
     display: flex;
     align-items: center;
     gap: 18px;
 }
 
-.urgentToDosSeparation{
+.urgentToDosSeparation {
     height: 100px;
     border: 2px solid #D1D1D1;
 }
 
-.summaryUrgentToDosRight{
+.summaryUrgentToDosRight {
     display: flex;
     flex-direction: column;
     gap: 13px;
 }
 
-.urgentToDoDate{
+.urgentToDoDate {
     font-size: 21px;
     font-weight: 700;
 }
 
-.urgentToDoInfo{
+.urgentToDoInfo {
     font-size: 16px;
 }
 
-.summaryCurrentTasksOverview{
+.summaryCurrentTasksOverview {
     display: flex;
     justify-content: space-between;
 }
 
-.summaryTasksBox{
+.summaryTasksBox {
     padding: 25px 0;
     display: flex;
     flex-direction: column;
@@ -103,25 +116,25 @@
     width: 168px;
 }
 
-.summaryTextDescription{
+.summaryTextDescription {
     font-size: 20px;
     text-align: center;
 }
 
-.summaryPageGreeting{
+.summaryPageGreeting {
     display: flex;
     flex-direction: column;
     gap: 3px;
 }
 
-.greetingMessage{
+.greetingMessage {
     font-size: 47px;
     font-weight: 500;
     color: var(--maincolor);
     line-height: 56.4px;
 }
 
-.greetingName{
+.greetingName {
     font-size: 64px;
     font-weight: 700;
     line-height: 76.8px;
