--- a/css/board.css
+++ b/css/board.css
@@ -17,7 +17,7 @@
     box-shadow: 0px 4px 4px 0px #00000040;
     border: 1px solid transparent;
 }
-
+/*BoardHeading*/
 .boardHeading{
     display: flex;
     flex-direction: column;
@@ -115,6 +115,8 @@
     height: 688px;
     row-gap: 24px;
 }
+
+/*TaskCard*/
 .taskCard{
     display: flex;
     flex-direction: column;
@@ -125,7 +127,7 @@
     border-radius: 24px;
     padding: 24px;
     box-shadow: 0 0 10px 5px rgb(0 0 0 0.2);
-    
+    cursor: pointer;
     }
 
 .taskCategory{
@@ -203,4 +205,55 @@
     line-height: 19.2px;
     color: #A8A8A8;
     font-weight: 400;
+}
+
+/*CardDetail*/
+
+#cardContainer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba( 0, 0, 0, 0.2);
+    z-index: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#cardDetail{
+    background-color: white;
+    box-shadow: 0 0 4 0 rgba(0 0 0 0.16);
+    border-radius: 30px;
+    width: 525px;
+    padding: 48px 40px 48px 40px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+}
+.taskInfoDetail{
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+}
+.taskInfoDetail li{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.taskInfoDetail th{
+    text-align: left;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    width: 100px;
+    color: #2A3647;
+}
+.taskTitleDetail{
+    font-size: 61px;
+    font-weight: 700;
+}
+.taskInfoDetail p{
+    font-size: 20px;
+
 }
