--- a/css/information.css
+++ b/css/information.css
@@ -4,6 +4,16 @@
     align-items: center;
     width: 1014px;
 }
+.informationHeader svg{
+    padding: 1px;
+}
+.informationHeader svg:hover{
+    background-color: #CDCDCD;
+    border-radius: 45px;
+    height: 26px;
+    width: 26px;
+    padding: 1px;
+}
 .informationText{
     width: 1014px;
 }
