--- a/css/board.css
+++ b/css/board.css
@@ -127,13 +127,12 @@
     width: 252px;
     border-radius: 24px;
     padding: 16px;
-    box-shadow: 0 0 10px 5px rgb(0 0 0 0.2);
+    box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.08);
     cursor: pointer;
     }
 
 .taskCategory{
     padding: 4px 16px 4px 16px;
-    background-color: #0038FF;
     height: 27px;
     border-radius: 8px;
     color: white;
