--- a/css/templates.css
+++ b/css/templates.css
@@ -123,6 +123,7 @@ header {
     background-color: var(--maincolor);
     padding: 10px;
     border-radius: 20px 0px 20px 20px;
+    z-index: 1000;
 }
 
 .smallMenu a {
