--- a/css/contacts.css
+++ b/css/contacts.css
@@ -147,6 +147,11 @@ main {
     justify-content: center;
     border: 3px solid #FFFFFF;
     border-radius: 70px;
+    align-self: flex-start;
+}
+
+.contactActionProfileBadgeBig {
+    margin-top: 67px;
 }
 
 .contactNameBig {
@@ -249,7 +254,7 @@ main {
     background-color: white;
     box-shadow: 0px 0px 4px 0px #0000001A;
     height: 592px;
-    width: 1212px;
+    width: 85%;
     border-radius: 30px;
     display: flex;
     justify-content: center;
@@ -383,6 +388,56 @@ main {
     background-color: var(--secondarycolor);
 }
 
+.smallEditMenu {
+    position: absolute;
+    bottom: 88px;
+    right: -200px;
+    width: 116px;
+    height: 100px;
+    border-radius: 20px 20px 0px 20px;
+    padding: 10px;
+    background-color: white;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: var(--maincolor);
+    z-index: 1000;
+    transition: right 0.1s ease;
+}
+
+.smallEditMenuOpened{
+    right: 6px;
+}
+
+.smallEditMenuButton {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 11px;
+    cursor: pointer;
+}
+
+.smallEditMenuButton:active {
+    filter: invert(64%) sepia(70%) saturate(2202%) hue-rotate(165deg) brightness(91%) contrast(94%);
+    user-select: none;
+}
+
+.smallEditMenuButton img {
+    height: 18px;
+    width: 18px;
+}
+
+.smallEditMenuOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    z-index: 1000;
+}
+
 @media (max-width: 1340px) {
     main h1 {
         font-size: 47px !important;
@@ -405,6 +460,12 @@ main {
         font-size: 27px;
     }
 
+    .editContactProfileBadge{
+        height: 120px;
+        width: 120px;
+        font-size: 47px;
+    }
+
     .contactNameBig {
         font-size: 36px;
     }
@@ -412,6 +473,19 @@ main {
     .contactPage {
         margin-left: 16px;
         margin-top: 48px;
+    }
+
+    .contactActionFields {
+        padding: 137px 23px 135px 54px;
+    }
+
+    .contactActionInput {
+        width: 400px;
+    }
+
+    .closeIconContainer {
+        right: 16px;
+        top: 24px;
     }
 }
 
@@ -435,13 +509,104 @@ main {
     }
 
     .contactsFrame {
-        width: 380px;
+        width: 355px;
+    }
+
+    .contactActionFields {
+        align-items: flex-start;
+        gap: 48px;
+    }
+
+    .contactActionInput {
+        width: 285px;
+    }
+
+    .contactActionProfileBadgeBig {
+        margin-top: 64px;
+    }
+
+    .formButtonsContainer {
+        flex-direction: column-reverse;
+        align-items: center;
+        margin-top: 0;
+    }
+
+    .formButton {
+        width: 202px;
+        padding: 18px 10px;
     }
 }
 
 @media (max-width: 940px) {
     main {
         padding: 80px 0px !important;
+    }
+
+    .contactActionsContainer {
+        flex-direction: column;
+        width: 396px;
+        height: 760px;
+        justify-content: flex-start;
+    }
+
+    .contactActionDetails {
+        padding: 124px 24px;
+        border-bottom-left-radius: 0px;
+        border-top-right-radius: 30px;
+        height: 352px !important;
+    }
+
+    .contactActionLogo {
+        display: none;
+    }
+
+    .actionHeadline {
+        font-size: 47px;
+    }
+
+    .actionSubTitle {
+        font-size: 20px;
+    }
+
+    .deleteButton {
+        display: none;
+    }
+
+    .contactActionFields {
+        flex-direction: column;
+        align-items: center;
+        padding: 0px 16px;
+        margin-top: -100px;
+    }
+
+    .contactActionProfileBadgeBig {
+        align-self: auto;
+        background-color: transparent;
+        color: transparent;
+    }
+
+    .editContactProfileBadge{
+        background-color: orange;
+        color: white;
+        margin-top: 40px;   
+    }
+
+    .contactActionForm {
+        margin: 17px 0px;
+        gap: 15px
+    }
+
+    .contactActionInput {
+        width: 364px;
+        height: 41px;
+    }
+
+    .closeIcon {
+        filter: invert(97%) sepia(0%) saturate(0%) hue-rotate(155deg) brightness(109%) contrast(101%);
+    }
+
+    .closeIcon:hover {
+        background-color: transparent;
     }
 }
 
@@ -478,5 +643,49 @@ main {
 
     .newContactButton {
         display: none;
+    }
+}
+
+@media (max-width: 435px) {
+    .contactActionsContainer {
+        width: 310px;
+        height: 620px;
+    }
+
+    .contactActionInput {
+        width: 280px;
+    }
+
+    .actionHeadline {
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+    .actionSubTitle {
+        font-size: 18px;
+    }
+
+    .contactActionFields {
+        gap: 13px;
+    }
+
+    .contactsFrame {
+        padding: 24px 0px 24px 8px;
+    }
+
+    .contactField {
+        gap: 12px;
+    }
+
+    .contactActionDetails {
+        padding: 96px 24px;
+    }
+
+    .contactPage {
+        margin-top: 0px;
+    }
+
+    .contactCardSubHead {
+        margin: 0;
     }
 }
