changed width edit contact container

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -255,9 +255,9 @@ main {
     box-shadow: 0px 0px 4px 0px #0000001A;
     height: 592px;
     width: 85%;
+    max-width: 1300px;
     border-radius: 30px;
     display: flex;
-    justify-content: center;
     align-items: center;
     z-index: 1001;
 }
@@ -266,7 +266,7 @@ main {
     background-color: var(--maincolor);
     padding: 154px 46px 252px;
     height: 100%;
-    width: 100%;
+    width: 480px;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     display: flex;
@@ -554,6 +554,7 @@ main {
         border-bottom-left-radius: 0px;
         border-top-right-radius: 30px;
         height: 352px !important;
+        width: 100%;
     }
 
     .contactActionLogo {
