--- a/css/addtask.css
+++ b/css/addtask.css
@@ -110,7 +110,7 @@
     background-size: 24px 24px;
     -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none; 
+    appearance: none;     
 }
 
 .inputDate {
@@ -279,6 +279,16 @@
     cursor: pointer;
 }
 
+.buttonClear:hover {
+    border: 2px solid #29ABE2;
+    color: #29ABE2;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2); 
+}
+
+.buttonClear:hover .iconCross {
+    filter: brightness(0) saturate(100%) invert(60%) sepia(74%) saturate(2034%) hue-rotate(165deg) brightness(94%) contrast(87%);
+}
+
 .buttonCreate {
     width: 183px;
     height: 56px;
@@ -297,10 +307,21 @@
     cursor: pointer;
 }
 
+
+.buttonCreate:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2); 
+}
 .icon {
     height: 24px;
     width: 24px;
 }
+.iconCross {
+    height: 24px;
+    width: 24px;
+}
+
+
 
 .iconPrio {
     height: 14.51px;
@@ -322,3 +343,4 @@
     gap: 16px;
 
 }
+
