--- a/css/login.css
+++ b/css/login.css
@@ -49,6 +49,11 @@
     cursor: pointer;
 }
 
+.buttonSignup:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2); 
+}
+
 .loginSection {
     width: 652px;
     height: 493px;
@@ -108,6 +113,7 @@
     text-align: left;
     color: black;
     margin-bottom: 32px;
+    cursor: pointer;
 }
 
 ::placeholder {
@@ -180,6 +186,11 @@
     cursor: pointer;
 }
 
+.buttonLogin:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2); 
+}
+
 .buttonGuest {
     width: 177px;
     height: 48px;
@@ -198,6 +209,13 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+}
+
+.buttonGuest:hover {
+    border: 2px solid #29ABE2;
+    color: #29ABE2;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2); 
+    padding: 15px 21px 15px 21px;
 }
 
 .policies {
@@ -223,51 +241,34 @@
     cursor: pointer;
 }
 
+.privacyPolicy:hover {
+    color: #29ABE2;
+    font-weight: 700;
+}
+
 .legalNotice {
     cursor: pointer;
 }
 
-.successButtonShow {
-    width: 312px;
-    height: 74px;
-    position: absolute;
-    right: 10%;
-    top: 67px;
-    border: none;
-    box-shadow: 0px 0px 4px 0px #0000001A;
-    color: white;
-    animation-delay: 800ms;
-    animation-duration: 0ms;
-    background-color: #2A3647;
-    border-radius: 10px;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.legalNotice:hover {
+    color: #29ABE2;
+    font-weight: 700;
 }
 
-.successButtonHide {
-    top: -7197px;
-    left: 4284px;
-
-}
 
 .logoStartscreen{
     position: absolute;
     width: 274px;
     height: 334.07px;
-    top: 345px;
-    left: 583px;
+    top: 50%;
+    left: 50%;
     z-index: 99;
-    display: inline-block;
+    transform: translate(-50%, -50%);
     animation-name: logo-animation;
     animation-fill-mode: forwards;
     animation-timing-function: ease-in-out;
     animation-duration: 1s;
+    animation-delay: 1s;
 }
 
 .startscreen {
@@ -280,6 +281,7 @@
     animation-fill-mode: forwards;
     animation-timing-function: ease-in-out;
     animation-duration: 1.5s;
+    animation-delay: 1s;
     opacity: 1;
     
 }
@@ -305,9 +307,11 @@
 @keyframes background-animation {
     from {
         opacity: 1;
+        position: fixed;
     }
 
     to {
        opacity: 0;
+       display: none;
     }
 }
