--- a/css/signup.css
+++ b/css/signup.css
@@ -25,16 +25,16 @@
     gap: 32px;
     background: #FFFFFF;
     box-shadow: 0px 0px 14px 3px #0000000A;
+    position: relative;
 }
 
 .headlineSectionDiv {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100%;
     padding-top: 48px;
-    padding-left: 48px;
     gap: 12px;
 }
 
@@ -45,12 +45,24 @@
     justify-content: center;
     flex-direction: column;
     width: 422px;
+   
 }
 
 .arrow {
     height: 32px;
     width: 32px;
     cursor: pointer;
+    position: absolute;
+    top: 64px;
+    left: 48px;
+}
+
+.arrow:hover {
+    height: 35px;
+    width: 35px;
+    background-color: #F6F7F8;
+    border-radius: 50%;
+  
 }
 
 .borderSignup {
@@ -91,6 +103,7 @@
     text-align: left;
     color: black;
     margin-bottom: 32px;
+    cursor: pointer;
 
 }
 
@@ -141,9 +154,20 @@
     cursor: pointer;
 }
 
+.checkbox:hover {
+
+}
+
 .policyTypo {
     color: #29ABE2;
     cursor: pointer;
+ 
+}
+
+.policyTypo:hover {
+    text-decoration: underline;
+    font-weight: 500;
+    
 }
 
 .signupButtonDiv {
@@ -173,6 +197,12 @@
     cursor: pointer;
 }
 
+.buttonSignup:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2); 
+}
+
+
 .policies {
     display: flex;
     flex-direction: row;
@@ -200,3 +230,41 @@
     cursor: pointer;
 }
 
+.privacyPolicy:hover {
+    color: #29ABE2;
+    font-weight: 700;
+}
+
+.legalNotice:hover {
+    color: #29ABE2;
+    font-weight: 700;
+}
+
+.successButtonShow {
+    width: 312px;
+    height: 74px;
+    position: absolute;
+    right: 10%;
+    top: 67px;
+    border: none;
+    box-shadow: 0px 0px 4px 0px #0000001A;
+    color: white;
+    animation-delay: 800ms;
+    animation-duration: 0ms;
+    background-color: #2A3647;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.successButtonHide {
+    top: -7197px;
+    left: 4284px;
+
+}
