--- a/css/board.css
+++ b/css/board.css
@@ -157,6 +157,11 @@
     font-weight: 400;;
     line-height: 19.2px;
     width: fit-content;
+}
+.technicalTask{
+    background-color: #1FD7C1;
+}
+.userStory{
     background-color: #0038FF;
 }
 .taskInfo{
